src/SCSS/components/Modules/Carousel/_carousel.scss
.carousel-section{
  padding: 35px 0;
  background-color: $secondary-dark-background;

  .slick-slider {
    position: relative;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 20px;
  }
  .slick-list {
    position: relative;
    display: block !important;
    overflow: hidden;
    padding: 100px !important;
    width: 100%;
  }
  .slick-track {
    position: relative;
    top: 0;
    left: 0;
    display: flex;
  }
  .slick-slide div {
    display: flex !important;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  .slick-slide .image {
    object-fit: cover;
    border-radius: 5px;
    min-width: 150px !important;
    width: 80%;
    
  }
  .slick-slide div div span {
    margin-top: 10px;
    width: inherit;
    text-align: center;
    font-size: 0.75rem;
    @include Fancy-Font;
    //font-weight: 400;
    text-transform: capitalize;
    color: white;
  }

  .slick-slide:not(.slick-active) {
    position: relative;
    z-index: 997;
  }
  .slick-slide.slick-active:not(.slick-current) {
    position: relative;
    z-index: 998;
    transform: scale(1.3);
    transition: 0.25s;
  }
  .slick-slide.slick-active.slick-current {
    position: relative;
    z-index: 999;
    transform: scale(1.6);
    transition: 0.25s;
  }
  .slick-slide.slick-active:not(.slick-current) .image,
  .slick-slide.slick-active.slick-current .image,
  .slick-slide:not(.slick-active) .image {
    width: 100% !important;
  }

  .slick-slide.slick-active.slick-current .sliderText {
    color: $primary-dark-accent;
    transition-duration: 0.5s;
    font-weight: bolder;
    text-transform: uppercase;
  }

  .slick-prev,
  .slick-next {
    display: none !important;
  }
  .custom-prevArrow,
  .custom-nextArrow {
    position: relative;
    z-index: 99999;
    top: -10px;
    fill: white;
    transition-duration: 0.5s;
  }
  .custom-prevArrow {
    left: -10px;
    
  }
  .custom-nextArrow {
    right: -10px;
    
  }
  .custom-prevArrow:hover,
  .custom-nextArrow:hover {
    fill: $tertiary-dark-accent;
    cursor: pointer;
  }

  .slick-dots{
    li{
      button{
        &:before{
          color: white;
        }
      }
    }
  }
}


.center{
  animation: slideAndFadeBottom 1.5s ease-in-out;
}

.SliderTitle{
    text-align: center;
    margin-bottom: 40px;
    color: $primary-dark-accent;
    @include Fancy-Font;
    font-weight: bold;
    animation: slideAndFadeTop 0.5s ease-in-out;
}

  @media screen and (max-width: 580px) {
    .carousel-section{
      .slick-slide div div span {
        display: none;
      }
      .slick-slide.slick-current div div span {
        display: block;
        margin-top: 10px;
        width: inherit;
        text-align: center;
        font-size: 0.7rem;
        @include Fancy-Font;
        //font-weight: 400;
        text-transform: capitalize;
        color: #111;
      }
    }
  }
  

